<resources>
    <string name="app_name">Bookhub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>