<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_favourites"
        android:title="@string/favourite" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/about_app"
        android:icon="@drawable/ic_about"
        android:title="@string/about_app" />

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />

    </group>
</menu>